--- a/.gitignore
+++ b/.gitignore
@@ -521,3 +521,7 @@ Build/Intermediates.noindex/pseudo.build/Debug/pseudo.build/dgph
 Build/Intermediates.noindex/pseudo.build/Debug/pseudo.build/dgph~
 Build/Intermediates.noindex/pseudo.build/Release/pseudo.build/dgph
 Build/Intermediates.noindex/pseudo.build/Release/pseudo.build/dgph~
+Build/Intermediates.noindex/pseudo.build/Release/pseudo.build/dgph~
+Build/Intermediates.noindex/pseudo.build/Release/pseudo.build/dgph
+Build/Intermediates.noindex/pseudo.build/Debug/pseudo.build/dgph~
+Build/Intermediates.noindex/pseudo.build/Debug/pseudo.build/dgph
